# PINNs-2D-Heat-Equations

./: .gitignore  Cargo.toml  README.md  pinn_examples.py  pinn_heat_equation.py  pinn_visualization.py  requirements.txt
depreacted/: quick_start.py  train_pinn.py
src/: fd.rs  main.rs  plotting.rs  stencils.rs
