[package]
name = "pinns-cylinder-flow"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "2D Heat Equation Solver using Finite Difference Methods"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: For visualization and output
plotters = "0.3"  # For plotting capabilities
# csv = "1.2"       # Uncomment if you want CSV output

[dev-dependencies]
# Testing dependencies
# criterion = "0.5"  # Uncomment when adding benchmarks

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
